--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,14 +8,14 @@
         "PLATFORM=PLATFORM_DESKTOP",
         "BUILD_MODE=DEBUG",
         "PROJECT_NAME=${fileBasenameNoExtension}",
-        "OBJS=${fileBasenameNoExtension}.cpp"
+        "OBJS=${workspaceFolder}/*.cpp"
       ],
       "windows": {
         "command": "mingw32-make.exe",
         "args": [
           "RAYLIB_PATH=C:/raylib/raylib",
           "PROJECT_NAME=${fileBasenameNoExtension}",
-          "OBJS=${fileBasenameNoExtension}.cpp",
+          "OBJS=${workspaceFolder}/*.cpp",
           "BUILD_MODE=DEBUG"
         ]
       }
@@ -27,14 +27,14 @@
       "args": [
         "PLATFORM=PLATFORM_DESKTOP",
         "PROJECT_NAME=${fileBasenameNoExtension}",
-        "OBJS=${fileBasenameNoExtension}.cpp"
+        "OBJS=${workspaceFolder}/*.cpp"
       ],
       "windows": {
         "command": "mingw32-make.exe",
         "args": [
           "RAYLIB_PATH=C:/raylib/raylib",
           "PROJECT_NAME=${fileBasenameNoExtension}",
-          "OBJS=${fileBasenameNoExtension}.cpp",
+          "OBJS=${workspaceFolder}/*.cpp",
         ]
       }
     }
